# call-audit-supervisor

./: .env.example  .gitattributes  .gitignore  Dockerfile.api  Dockerfile.worker  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/app/: __init__.py  audit.py  authz.py  config.py  db.py  logconfig.py  main.py  notifier.py  pagination.py  passwords.py  retention.py  schemas.py  security.py  storage.py
backend/app/api/: __init__.py  admin.py  agents.py  auth.py  calls.py  checklists.py  events.py  kb.py  objections.py  output_schemas.py  portfolios.py  prompts.py  report_templates.py  reports.py  summaries.py  transcripts.py  uploads.py  verification.py  webhooks.py
backend/app/checklists/: __init__.py  parse.py  rubric.py  seed.py  service.py
backend/app/eval/: __init__.py  gate.py  (+2 more)
backend/eval/: gold_set.json
backend/migrations/: env.py
backend/scripts/: seed_creds.py
backend/tests/: conftest.py  test_assemblyai.py  test_backoff.py  test_buckets.py  test_caps.py  test_checklist_parse.py  test_eval.py  test_gemini_judge.py  test_notifier.py  test_orchestration_db.py  test_phase0_api.py  test_phase1_ingestion.py  test_phase4_checklists.py  test_phase4_kb_rubric.py  test_phase5_judge.py  test_phase6_reports.py  test_phase7_verification.py  test_phase8_observability.py  test_rbac.py  test_retry.py  test_routing.py  test_states.py  test_storage.py  test_webhook.py
docs/: DEPLOY.md  RATE_LIMITS_AND_COST.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
scripts/: setup_r2.py
(+96 files in other folders)
