[project]
name = "everest-auditor"
version = "0.1.0"
description = "Call Quality Assurance & Verification Platform (Everest Auditor)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",  # multipart form parsing for the upload proxy
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pgvector>=0.3",
    "httpx>=0.27",
    "google-genai>=1.0",
    "pypdf>=4.0",
    "tenacity>=8.4",
    "python-jose[cryptography]>=3.3",
    "sse-starlette>=2.1",
    "boto3>=1.34",            # R2 (S3-compatible) presigned URLs
    "structlog>=24.1",
    "playwright>=1.40",       # headless Chromium → faithful HTML→PDF report export
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "anyio>=4.4",
]

[tool.setuptools.packages.find]
where = ["backend"]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["backend"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
strict = true
mypy_path = "backend"
explicit_package_bases = true
ignore_missing_imports = true
# FastAPI route decorators and SQLAlchemy mapped decorators are untyped; don't fail on them.
disallow_untyped_decorators = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
pythonpath = ["backend"]
